# goblin

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  aliases.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: main.yml
assets/: hello_world.c  hello_world_fat64  hello_world_fat_archives  hello_world_fat_binaries
etc/projects/bingen/: .gitignore  CMakeLists.txt  README.md  bingen.filters  bingen.sln  bingen.vcxproj  main.cc
examples/: ar.rs  automagic.rs  dotnet_pe_analysis.rs  dyldinfo.rs  install_name_tool.rs  lazy_parse.rs  lipo.rs  ls.rs  patchelf.rs  pe_add_section.rs  rdr.rs  rewrite_pe.rs  scroll.rs
fuzz/: Cargo.toml
fuzz-afl/: Cargo.toml
fuzz-afl/fuzz_targets/: afl_parse.rs  afl_parse_elf.rs
fuzz/fuzz_targets/: parse.rs  parse_elf.rs
goblin/: all.html  enum.Hint.html  enum.Object.html  fn.peek.html  fn.peek_bytes.html  index.html  struct.HintData.html
goblin/archive/: constant.MAGIC.html  constant.SIZEOF_HEADER.html  constant.SIZEOF_MAGIC.html  enum.IndexType.html  index.html  struct.Archive.html  struct.Header.html  struct.Index.html  struct.Member.html  struct.MemberHeader.html
goblin/container/: constant.CONTAINER.html  enum.Container.html  enum.Endian.html  index.html  struct.Ctx.html
goblin/elf/: index.html  struct.Elf.html
goblin/elf/compression_header/: constant.ELFCOMPRESS_HIOS.html  constant.ELFCOMPRESS_HIPROC.html  constant.ELFCOMPRESS_LOOS.html  constant.ELFCOMPRESS_LOPROC.html  constant.ELFCOMPRESS_ZLIB.html  index.html  struct.CompressionHeader.html
goblin/elf/dynamic/: constant.DF_1_CONFALT.html  constant.DF_1_DIRECT.html  constant.DF_1_DISPRELDNE.html  constant.DF_1_DISPRELPND.html  constant.DF_1_EDITED.html  constant.DF_1_ENDFILTEE.html  constant.DF_1_GLOBAL.html  constant.DF_1_GLOBAUDIT.html  constant.DF_1_GROUP.html  constant.DF_1_IGNMULDEF.html  constant.DF_1_INITFIRST.html  constant.DF_1_INTERPOSE.html  constant.DF_1_LOADFLTR.html  constant.DF_1_NODEFLIB.html  constant.DF_1_NODELETE.html  constant.DF_1_NODIRECT.html  constant.DF_1_NODUMP.html  constant.DF_1_NOHDR.html  constant.DF_1_NOKSYMS.html  constant.DF_1_NOOPEN.html  constant.DF_1_NORELOC.html  constant.DF_1_NOW.html  constant.DF_1_ORIGIN.html  constant.DF_1_PIE.html  constant.DF_1_SINGLETON.html  constant.DF_1_SYMINTPOSE.html  constant.DF_1_TRANS.html  constant.DF_BIND_NOW.html  constant.DF_ORIGIN.html  constant.DF_STATIC_TLS.html  constant.DF_SYMBOLIC.html  constant.DF_TEXTREL.html  constant.DT_ADDRNUM.html  constant.DT_ADDRRNGHI.html  constant.DT_ADDRRNGLO.html  constant.DT_AUDIT.html  constant.DT_BIND_NOW.html  constant.DT_CONFIG.html  constant.DT_DEBUG.html  constant.DT_DEPAUDIT.html  (+61 more)
goblin/elf/header/: constant.EI_ABIVERSION.html  constant.EI_CLASS.html  constant.EI_DATA.html  constant.EI_OSABI.html  constant.EI_VERSION.html  constant.ELFCLASS32.html  constant.ELFCLASS64.html  constant.ELFCLASSNONE.html  constant.ELFCLASSNUM.html  constant.ELFDATA2LSB.html  constant.ELFDATA2MSB.html  constant.ELFDATANONE.html  constant.ELFMAG.html  constant.ELFOSABI_NONE.html  constant.EM_386.html  constant.EM_56800EX.html  constant.EM_68HC05.html  constant.EM_68HC08.html  constant.EM_68HC11.html  constant.EM_68HC12.html  constant.EM_68HC16.html  constant.EM_68K.html  constant.EM_78KOR.html  constant.EM_8051.html  constant.EM_860.html  constant.EM_88K.html  constant.EM_960.html  constant.EM_AARCH64.html  constant.EM_ALTERA_NIOS2.html  constant.EM_AMDGPU.html  constant.EM_ARC.html  constant.EM_ARCA.html  constant.EM_ARC_COMPACT.html  constant.EM_ARC_COMPACT2.html  constant.EM_ARM.html  constant.EM_AVR.html  constant.EM_AVR32.html  constant.EM_BA1.html  constant.EM_BA2.html  constant.EM_BLACKFIN.html  (+164 more)
goblin/elf/note/: constant.ELF_NOTE_ABI.html  constant.ELF_NOTE_OS_FREEBSD.html  constant.ELF_NOTE_OS_GNU.html  constant.ELF_NOTE_OS_LINUX.html  constant.ELF_NOTE_OS_SOLARIS2.html  constant.NT_FILE.html  constant.NT_GNU_ABI_TAG.html  constant.NT_GNU_BUILD_ID.html  constant.NT_GNU_GOLD_VERSION.html  constant.NT_GNU_HWCAP.html  constant.NT_PRPSINFO.html  constant.NT_PRSTATUS.html  constant.NT_SIGINFO.html  index.html  sidebar-items.js  struct.Nhdr32.html  struct.Nhdr64.html  struct.Note.html  struct.NoteDataIterator.html  struct.NoteIterator.html
goblin/elf/program_header/: constant.PF_R.html  constant.PF_W.html  constant.PF_X.html  constant.PT_ARM_EXIDX.html  constant.PT_DYNAMIC.html  constant.PT_GNU_EH_FRAME.html  constant.PT_GNU_RELRO.html  constant.PT_GNU_STACK.html  index.html  (+17 more)
goblin/elf32/: index.html
goblin/elf64/: index.html
goblin/error/: enum.Error.html
goblin/mach/: enum.Mach.html  fn.parse_magic_and_ctx.html  index.html  struct.FatArchIterator.html  struct.MachO.html  struct.MachOIterator.html  struct.MultiArch.html
goblin/pe/: index.html  struct.Coff.html  struct.PE.html
goblin/strtab/: index.html  struct.Strtab.html
src/: error.rs  lib.rs  macros.rs  mod.rs  options.rs  strtab.rs  tools.rs  zerocopy.rs
src/archive/: mod.rs
src/elf/: arm.rs  build_attributes.rs  compression_header.rs  constants_header.rs  constants_relocation.rs  dyn.rs  dynamic.rs  gnu_hash.rs  header.rs  mod.rs  note.rs  options.rs  program_header.rs  rela.rs  reloc.rs  relocation_constants.rs  section_header.rs  strtab.rs  sym.rs  symver.rs  writer.rs
src/elves/: mod.rs
src/goblin/: error.rs.html  lib.rs.html  strtab.rs.html
src/mach/: bind_opcodes.rs  compact_unwind_info.rs  constants.rs  exports.rs  fat.rs  header.rs  imports.rs  load_command.rs  mod.rs  relocation.rs  segment.rs  symbols.rs  utils.rs  version.rs  writer.rs
src/pe/: authenticode.rs  certificate_table.rs  characteristic.rs  clr.rs  ctx.rs  data_directories.rs  debug.rs  delay_import.rs  dynreloc.rs  exception.rs  export.rs  header.rs  import.rs  load_config.rs  mod.rs  optional_header.rs  options.rs  relocation.rs  resource.rs  section_table.rs  symbol.rs  tls.rs  utils.rs  writer.rs
tests/: archive.rs  compare_dyldinfos.rs  elf.rs  elf_writer.rs  macho.rs  macho_writer.rs  pe.rs  te.rs
tests/python/: test_install_name_tool.py
(+1579 files in other folders)
