[package]
name = "goblin"
version = "0.0.14"
authors = ["m4b <m4b.github.io@gmail.com>", "seu <seu@panopticon.re>", "Will Glynn <will@willglynn.com>"]
readme = "README.md"
keywords = ["binary", "elf", "mach", "pe", "archive"]
repository = "https://github.com/m4b/goblin"
license = "MIT"
description = "An impish, cross-platform, ELF, Mach-o, and PE binary parsing and loading crate"
documentation = "https://docs.rs/goblin"
categories = ["parsing", "development-tools::debugging"]
include = ["src/**/*", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md", "etc/*", "examples/*", "tests/*", "fuzz/**/*"]

[lib]

[dev-dependencies]
env_logger = "0.4.3"

[dependencies]
plain = "0.2.3"

[dependencies.log]
version = "0.3.8"
default-features = false
optional = true

[dependencies.scroll]
version = "0.9.0"
default_features = false

[features]
default = ["std", "elf32", "elf64", "mach32", "mach64", "pe32", "pe64", "archive", "endian_fd"]
std = ["alloc", "scroll/std"]
alloc = ["scroll/derive", "log"]
endian_fd = ["alloc"]
elf32 = []
elf64 = []
# for now we will require mach and pe to be alloc + endian_fd
mach32 = ["alloc", "endian_fd"]
mach64 = ["alloc", "endian_fd"]
pe32 = ["alloc", "endian_fd"]
pe64 = ["alloc", "endian_fd"]
archive = ["alloc"]

# [profile.dev]
# opt-level = 0
# debug = true
# rpath = false
# lto = false
# debug-assertions = true
# codegen-units = 4

[badges.travis-ci]
branch = "master"
repository = "m4b/goblin"
