[package]
name = "goblin"
version = "0.7.1"
authors = [
    "m4b <m4b.github.io@gmail.com>",
    "seu <seu@panopticon.re>",
    "Will Glynn <will@willglynn.com>",
    "Philip Craig <philipjcraig@gmail.com>",
    "Lzu Tao <taolzu@gmail.com>",
]
categories = ["parsing", "development-tools::debugging"]
documentation = "https://docs.rs/goblin"
edition = "2021"
rust-version = "1.60.0"
include = [
    "src",
    "CHANGELOG.md",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]
keywords = ["binary", "elf", "mach", "pe", "archive"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/m4b/goblin"
description = "An impish, cross-platform, ELF, Mach-o, and PE binary parsing and loading crate"

[dependencies]
plain = "0.2.3"

[dependencies.log]
version = "0.4"
default-features = false
optional = true

[dependencies.scroll]
version = "0.11"
default_features = false

[features]
default = ["std", "elf32", "elf64", "mach32", "mach64", "pe32", "pe64", "archive", "endian_fd"]
std = ["alloc", "scroll/std"]
alloc = ["scroll/derive", "log"]
endian_fd = ["alloc"]
elf32 = []
elf64 = []
# for now we will require mach and pe to be alloc + endian_fd
mach32 = ["alloc", "endian_fd", "archive"]
mach64 = ["alloc", "endian_fd", "archive"]
pe32 = ["alloc", "endian_fd"]
pe64 = ["alloc", "endian_fd"]
archive = ["alloc"]

[badges.travis-ci]
branch = "master"
repository = "m4b/goblin"
