[package]
name = "goblin-fuzz"
version = "0.0.1"
authors = ["Seo Sanghyeon <sanxiyn@gmail.com>"]
edition = "2018"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies.goblin]
path = ".."

[profile.release]
debug = true

[dependencies.libfuzzer-sys]
git = "https://github.com/rust-fuzz/libfuzzer-sys.git"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"

[[bin]]
name = "parse_elf"
path = "fuzz_targets/parse_elf.rs"
